🐛 Fix Overflow Input Datetime-local

--- a/style/_global.scss
+++ b/style/_global.scss
@@ -45,6 +45,10 @@ a {
   text-decoration: none;
 }
 
+.root {
+  overflow-y: hidden;
+}
+
 .tooltip {
   position: relative;
   cursor: pointer;
