--- a/style/_setting.scss
+++ b/style/_setting.scss
@@ -5,7 +5,8 @@
     padding: 10px;
     border-radius: 10px;
     max-height: 630px;
-    overflow-x: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .setting label {
@@ -14,6 +15,7 @@
 
 .setting input[type="text"],
 .setting input[type="number"],
+.setting input[type="datetime-local"],
 .setting input[type="url"] {
     height: 50px;
     border: 1px solid rgba(0, 0, 0, 0.3);
@@ -212,8 +214,8 @@
 }
 
 .setting-name-appID {
-    // display: flex;
-    display: none;
+    display: flex;
+    // display: none;
     align-items: center;
     gap: 10px;
     margin-bottom: 10px;
